--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.1|^8.0",
-    "symfony/property-access": "^5.0"
+    "symfony/property-access": "^4.0|^5.0"
   },
   "autoload": {
     "psr-4": {
