--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
   "license": "MIT",
   "require": {
     "php": "^7.1|^8.0",
-    "symfony/property-access": "^5.0|^6.0"
+    "doctrine/orm": "^2.0|^3.0",
+    "nesbot/carbon": "^2.0",
+    "symfony/http-foundation": "^5.0|^6.0",
+    "symfony/property-access": "^5.0|^6.0",
+    "symfony/security-core": "^5.0|^6.0"
   },
   "autoload": {
     "psr-4": {
