--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "nesbot/carbon": "^2.0",
     "symfony/http-foundation": "^5.0|^6.0",
     "symfony/property-access": "^5.0|^6.0",
-    "symfony/security-core": "^5.0|^6.0"
+    "symfony/security-core": "^5.0|^6.0",
+    "somnambulist/cte-builder": "^1.0"
   },
   "autoload": {
     "psr-4": {
