--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "symfony/http-foundation": "^5.0|^6.0",
     "symfony/property-access": "^5.0|^6.0",
     "symfony/security-core": "^5.0|^6.0",
-    "somnambulist/cte-builder": "^1.0"
+    "somnambulist/cte-builder": "^1.0|^2.0"
   },
   "autoload": {
     "psr-4": {
