--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
   "require": {
     "php": "^7.1|^8.0",
     "doctrine/orm": "^2.0|^3.0",
-    "nesbot/carbon": "^2.0",
-    "symfony/http-foundation": "^5.0|^6.0",
-    "symfony/property-access": "^5.0|^6.0",
-    "symfony/security-core": "^5.0|^6.0",
-    "somnambulist/cte-builder": "^1.0|^2.0"
+    "nesbot/carbon": "^2.0|^3.0",
+    "symfony/http-foundation": "^5.0|^6.0|^7.0",
+    "symfony/property-access": "^5.0|^6.0|^7.0",
+    "symfony/security-core": "^5.0|^6.0|^7.0",
+    "somnambulist/cte-builder": "^1.0|^2.0|^3.0"
   },
   "autoload": {
     "psr-4": {
